tests/parser/should_fail/T18251a.hs
module T18251a where

pairs xs @ (_:xs') = zip xs xs'
